<resources>
    <string name="app_name">Practicum-Android-Diploma</string>
    <string name="search_vacancies">Поиск вакансий </string>
    <string name="filters_settings">Настройки фильтрации</string>
    <string name="choose_country">Выбор страны</string>
    <string name="choose_workplace">Выбор места работы</string>
    <string name="choose_region">Выбор региона</string>
    <string name="choose_industry">Выбор отрасли</string>
    <string name="vacancy_layout">Вакансия</string>
    <string name="favorites">Избранное</string>
    <string name="team">Команда</string>
    <string name="Main">Главная</string>
    <string name="Favorites">Избранное</string>
    <string name="Team">Команда</string>
    <string name="Enter_your_request">Введите запрос</string>
    <string name="No_internet">Нет интернета</string>
    <string name="no_vac">Не удалось получить\nсписок вакансий</string>
    <string name="no_vac_msg">Таких вакансий нет</string>
    <string name="empty_list">Список пуст</string>
    <string name="Server_error">Ошибка сервера</string>
    <string name="vac_deleted">Вакансия не найдена или\nудалена</string>
    <string name="experience">Требуемый опыт</string>
    <string name="vac_description">Описание вакансии</string>
    <string name="responsibilities">Обязанности</string>
    <string name="requirements">Требования</string>
    <string name="Terms">Условия</string>
    <string name="skills">Ключевые навыки</string>
    <string name="contacts">Контакты</string>
    <string name="salary_not_specified">Зарплата не указана</string>
    <string name="share_vac">Зарплата не указана</string>
    <string name="not_specified">Не указано</string>
    <string name="share_vacancy_title">Поделиться вакансией</string>
    <string name="job_loc">Место работы</string>
    <string name="industry">Отрасль</string>
    <string name="exp_salary">Ожидаемая зарплата</string>
    <string name="summary">Введите сумму</string>
    <string name="no_salary">Не показывать без зарплаты</string>
    <string name="accept">Применить</string>
    <string name="deny">Сбросить</string>
    <string name="Country">Страна</string>
    <string name="Region">Регион</string>
    <string name="Russia">Россия</string>
    <string name="Ukraine">Украина</string>
    <string name="Kazakhstan">Казахстан</string>
    <string name="Azerbaijan">Азербайджан</string>
    <string name="Belarus">Беларусь</string>
    <string name="Georgia">Грузия</string>
    <string name="Kyrgyzstan">Кыргыстан</string>
    <string name="Uzbekistan">Узбекистан</string>
    <string name="Other_regions">Другие регионы</string>
    <string name="enter_industry">Введите отрасль</string>
    <string name="enter_region">Введите регион</string>
    <string name="no_region_error">Такого региона нет</string>
    <string name="no_region_list">Не удалось получить\nсписок</string>
    <string name="Choose">Выбрать</string>
    <string name="country">country</string>
    <string name="region">region</string>


    <plurals name="found_vac_msg">
        <item quantity="one">Найдена %d вакансия</item>
        <item quantity="few">Найдено %d вакансии</item>
        <item quantity="many">Найдено %d вакансий</item>
        <item quantity="other">Найдено %d вакансий</item>
    </plurals>

</resources>
